<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/workitinerary"
    app:startDestination="@id/workItineraryScreen">

    <fragment
        android:id="@+id/workItineraryScreen"
        android:name="com.tda.facsitio.ui.workItinerary.WorkItineraryFragment"
        android:label="@string/itinerarios_de_trabajo"
        tools:layout="@layout/fragment_work_itinerary">
        <action
            android:id="@+id/action_workItineraryScreen_to_servicesScreen"
            app:destination="@id/servicesScreen"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_workItineraryScreen_to_mapFragment"
            app:destination="@id/mapFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/servicesScreen"
        android:name="com.tda.facsitio.ui.services.ServicesFragment"
        android:label="@string/servicios"
        tools:layout="@layout/fragment_services">
        <argument
            android:name="currentItin"
            app:argType="com.tda.facsitio.data.model.DhtItinTrabajo" />
        <action
            android:id="@+id/action_servicesScreen_to_actionsFragment"
            app:destination="@id/actionsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/detailScreen"
        android:name="com.tda.facsitio.ui.serviceDetail.DetailFragment"
        android:label="@string/detalle_servicios"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="currentService"
            app:argType="com.tda.facsitio.data.model.DhtItinTrabajoServicio" />
    </fragment>
    <fragment
        android:id="@+id/actionsFragment"
        android:name="com.tda.facsitio.ui.actions.ActionsFragment"
        android:label="@string/acciones"
        tools:layout="@layout/fragment_actions">
        <argument
            android:name="currentService"
            app:argType="com.tda.facsitio.data.model.DhtItinTrabajoServicio" />
        <action
            android:id="@+id/action_actionsFragment_to_detailScreen"
            app:destination="@id/detailScreen"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/mapFragment"
        android:name="com.tda.facsitio.ui.map.MapFragment"
        android:label="Ubicaciones"
        tools:layout="@layout/fragment_map">
        <argument
            android:name="currentItin"
            app:argType="com.tda.facsitio.data.model.DhtItinTrabajo" />
    </fragment>
</navigation>