<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="itinTrabajoData"
            type="com.tda.facsitio.data.model.DhtItinTrabajo" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_margin="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/llMap"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@drawable/bg_rounded_blue"
            android:navigateAndSendDataToMapFragment="@{itinTrabajoData}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_map"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/ubuntu_medium"
                android:text="Abrir mapa"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="0dp"
            android:layout_height="170dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:navigateAndSendDataToServicesFragment="@{itinTrabajoData}"
            app:cardBackgroundColor="?attr/cardBgColor"
            app:cardCornerRadius="6dp"
            app:cardElevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_bg_red">

                <LinearLayout
                    android:id="@+id/llEsItinIndicador"
                    android:layout_width="32dp"
                    android:layout_height="match_parent"
                    android:background="@color/red"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tvEsItin"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_bold"
                        android:rotation="-90"
                        android:text="@{itinTrabajoData.esItinerarioTrabajo}"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/ivCheck"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_center_suite"
                    app:layout_constraintStart_toEndOf="@+id/llEsItinIndicador"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvCentroTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/centro"
                    android:textColor="?attr/primaryTextColor"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/ivCheck"
                    app:layout_constraintStart_toEndOf="@+id/ivCheck"
                    app:layout_constraintTop_toTopOf="@+id/ivCheck" />

                <TextView
                    android:id="@+id/tvCentroItin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="2132"
                    android:textColor="?attr/primaryTextColor"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/ivCheck"
                    app:layout_constraintStart_toEndOf="@+id/tvCentroTxt"
                    app:layout_constraintTop_toTopOf="@+id/ivCheck" />

                <LinearLayout
                    android:id="@+id/llRutaItinTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="@+id/tvCentroTxt"
                    app:layout_constraintTop_toBottomOf="@+id/tvCentroTxt">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_regular"
                        android:text="@string/ruta"
                        android:textColor="?attr/secondaryTextColor"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:text="@string/itinerario"
                        android:textColor="?attr/secondaryTextColor"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toEndOf="@+id/llRutaItinTxt"
                    app:layout_constraintTop_toBottomOf="@+id/tvCentroTxt">

                    <TextView
                        android:id="@+id/tvRuta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_regular"
                        android:text="11"
                        android:textColor="?attr/secondaryTextColor"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvItin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:text="01"
                        android:textColor="?attr/secondaryTextColor"
                        android:textSize="14sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/ivInfo"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_information"
                    app:layout_constraintStart_toEndOf="@+id/llEsItinIndicador"
                    app:layout_constraintTop_toBottomOf="@+id/llRutaItinTxt" />

                <TextView
                    android:id="@+id/tvInfoTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:text="@string/informacion"
                    android:textColor="?attr/primaryTextColor"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/ivInfo"
                    app:layout_constraintStart_toEndOf="@+id/ivInfo"
                    app:layout_constraintTop_toTopOf="@+id/ivInfo" />

                <LinearLayout
                    android:id="@+id/llInformacionItin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="end"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="@+id/tvInfoTxt"
                    app:layout_constraintTop_toBottomOf="@+id/tvInfoTxt">

                    <TextView
                        android:id="@+id/tvServicioPorTrabajar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:convertIntAndSetText="@{itinTrabajoData.ccServicios}"
                        android:fontFamily="@font/ubuntu_regular"
                        android:textColor="?attr/secondaryTextColor"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvServiciosTrabajados"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:convertIntAndSetText="@{itinTrabajoData.ccContratos}"
                        android:fontFamily="@font/ubuntu_regular"
                        android:textColor="?attr/secondaryTextColor"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toEndOf="@+id/llInformacionItin"
                    app:layout_constraintTop_toBottomOf="@+id/tvInfoTxt">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_regular"
                        android:text="@string/servicios_min"
                        android:textColor="?attr/secondaryTextColor"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:text="@string/contratos"
                        android:textColor="?attr/secondaryTextColor"
                        android:textSize="14sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvIdMes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="02/2021"
                    android:textColor="?attr/secondaryTextColor"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/custom_bg_blue"
                    android:orientation="vertical"
                    android:padding="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:id="@+id/tvTipoItin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/ubuntu_medium"
                        android:text="@{itinTrabajoData.tiItinerarioTrabajo}"
                        android:textColor="@color/blue"
                        android:textSize="12sp" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>